<resources>
    <string name="app_name">Womeniya</string>
    <string name="laws_related_n_to_women">LAWS RELATED \n TO WOMEN</string>
    <string name="helpline_number_7070762756">HELPLINE NUMBER - 1091</string>
    <string name="tips_to_n_escape_from_threat">TIPS TO \n ESCAPE FROM THREAT</string>
    <string name="phone_number_1">Phone Number 1</string>
    <string name="phone_number_2">Phone Number 2</string>
    <string name="heading1">Safety Tips</string>
    <string name="tips1">

        1- Women must have all the emergency numbers with them and WhatsApp also if possible so that they can immediately tell their family members and police.
\n \n 2- Hold your bag as tightly as you can when you are in a public transport. You can use it to hit your predator.
\n \n 3- When you are walking on a road,keep your mobile phone handy but avoid using it . Being on the phone makes you less alert.
\n \n 4- When you are travelling in an auto alone , make sure that you share the auto number
        with someone in your family even if its  during the day.
\n \n 5- Similarly if you have booked a cab always share your coordinates with someone.
\n \n 6- When in office , avoid going to the isolates areas with no CCTV cameras.
\n \n 7- If you have parked your car , always look underneath ,especially at night or at less crowded areas.
\n \n 8- Whenever you are posting anything on social media , make sure that you  do not do it in real- time.
        Because if you do , you are telling people on social media about
        your whereabouts. Delay those posts by say , 20-30 minutes.
\n \n 9- Always ensure that you are not posting anything on social media with your address
        or phone number on it.
\n \n 10- Whenever you are giving out orders for delivery at a grocery store ,
        make sure that you whisper your address or write it down somewhere and give it to the shopkeeper. Never announce it .
\n \n 11- Whenever you are getting your phone recharged , if its  at a store , do not
        loudly speak your phone number.
\n \n 12- Always pour your own drinks at parties and do not take drinks from complete strangers
        or even friends. If you have left your drink unattended for even a few minutes then
        leave it and take a new drink . It may have been spiked when you are not looking.


    </string>
    <string name="heading3">Laws Related To Women</string>
    <string name="laws">

        The Indian Penal Code , 1960, lays down the provision to penalise the culprit for the heinous
        offences against women. Various sections under IPC specifically deals with such crimes.
\n \n Acid Attack ( Sections 326A and 326B)
\n \n Rape ( Sections 375 , 376 , 376A , 376B , 376C , 376D and 376E.
\n \n Kidnapping and abduction for various purposes ( Sections 363-373 )
\n \n Murder , Dowry Death , Abedment of Suicide,etc. (Sections 302 , 304B and 306 )
\n \n Cruelty by her husband or her relatives ( Section 498A )
\n \n Outraging the modesty of women (Section 354 )
\n \n Sexual harassment ( Section 354A )
\n \n Assault on women with intend to disrobe a women (Section 354B )
\n \n Voyeurism ( Section 354C )
\n \n Stalking ( Section 354D )
\n \n Word , gesture or act intended to insult the modesty of a women ( Section 509 )
        \n \n ---------------------------------------------------------------------------------
        \n \n The Immoral Traffic (Prevention) Act, 1956
        \n \n The Dowry Prohibition Act, 1961 (28 of 1961) (Amended in 1986)
        \n \n The Indecent Representation of Women (Prohibition) Act, 1986
        \n \n The Commission of Sati (Prevention) Act, 1987 (3 of 1988)
        \n \n Protection of Women from Domestic Violence Act, 2005
        \n \n The Sexual Harassment of Women at Workplace (PREVENTION, PROHIBITION and REDRESSAL) Act, 2013
        \n \n The Criminal Law (Amendment) Act, 2013
    </string>
    <string name="please_add_your_emergency_contact_numbers">Please add your emergency Contact Numbers</string>
    <string name="heading2">Tips to Escape from Threat</string>
    <string name="threats">



          1. What should a woman do if she finds herself alone in the company of a strange male as
        she prepares to enter a lift in a High Rise apartment late at night.????? \n
        \n
        Experts Say : Enter the lift. If you need to reach the 13th floor, press all the
        buttons up to your destination. No one will dare attack you in a lift that stops on every
        floor. \n
        \n
        2. What to do if a stranger tries to attack you when you are alone in your house,
        run into the kitchen. \n
        \n
        Experts Say: You alone know where the chilli powder and turmeric are kept. And where the knives and plates are.\n
        All these can be turned into deadly weapons. If nothing else, start throwing plates and utensils all over. \n
        Let them break. Scream. Remember that noise is the greatest enemy of a molester. \n
        He does not want to be caught.\n \n
        3. Taking an Auto or Taxi at Night. \n
        \n
        Experts Say: Before getting into an auto at night, note down its registration number. \n
        Then use the mobile to call your family or friend and pass on the details to them in the language the driver understands. \n
        Even if no one answers your call, pretend you are in a conversation.\n
        The driver now knows someone has his details and he will be in serious trouble if anything goes wrong. \n
        He is now bound to take you home safe and sound.\n
        A potential attacker is now your de facto protector.\n
        \n
        4. What if the driver turns into a street he is not supposed too and you feel you are entering a danger zone …\n
        \n

Experts Say : Use the handle of your purse or your stole (dupatta) to wrap around his neck and pull him back.
        \n
        Within seconds, he will feel choked and helpless. In case you donot have a purse or stole
        just pull him back by his collar. \n
        The top button of his shirt would then do the same trick. \n
        \n
        5. If you are stalked at night.\n
        \n
        Expert Say : Enter a shop or a house and explain your predicament. If it is night and shops are not open, go inside an ATM box. \n
        ATM centres always have close circuit television. Fearing identification, no one will dare attack you. \n
        After all, being mentally alert is the greatest weapon you can ever have.
        </string>
    <string name="laws_related_n_to_women2">LAWS RELATED \n TO WOMEN</string>
    <string name="safety_tips">SAFETY Tips</string>
    <string name="tips_to_n_escape_from_threat2">TIPS TO \n ESCAPE FROM THREAT</string>
    <string name="add_contact">Add Contact</string>

</resources>